<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">assignment2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="reminder">Settings</string>
    <string name="done">Settings</string>
    
    <string name="Table1">Table 1</string>
    <string name="Table2">Table 2</string>
    <string name="Table3">Table 3</string>
    <string name="Table4">Table 4</string>
    <string name="toggle_turn_on">Table 4</string>
    <string name="toggle_turn_off">Table 4</string>
    

    
    
     <string name="Password">Enter Password</string>
     <string name="Username">Enter Username</string>
     <string name="Submit">Submit</string>
     <string name="Calculate">Calculate</string>
     
     <string name="Share">Share</string>
     <string name="Password1">Password</string>
     <string name="Username1">Username</string>
     <string name="MenuForDay">Menu For Day</string>
     <string name="Delete">Delete</string>
     
     <string name="Choices">Choices Of The Day</string>
     <string name="Steak">Steak</string>
     <string name="Beef">Beef,Green Pepper,Black Bean</string>
     <string name="Chicken">Chicken Dips</string>
     <string name="Continental">Continental</string>
     <string name="Doner">Doner Kebab</string>
     <string name="Irish">Full Irish</string>
     <string name="Omelette">Omelette</string>
     <string name="Pizza">Pizza</string>
     <string name="Pasta">Pasta</string>
     <string name="Stew">Irish Stew</string>
     
     <string name="Extra">Extra Cheese</string>
     <string name="Mushrooms">Portobella Mushrooms</string>
     <string name="Tomatoes">Roma Tomatoes</string>
     <string name="Olives">Sweet Olives</string>
     <string name="Pineapple">Swet Pineapple</string>
     <string name="Peppers">Banana Peppers</string>
     
     
     <string name="Tea">Tea</string>
     <string name="Coffee">Coffee</string>
     <string name="Orange">Orange Juice</string>
     <string name="Chips">Chips</string>
     
     <string name="Rice">Rice</string>
     
     <string name="SubTotal">SubTotal:</string>
     <string name="Total">Total:</string>
     <string name="Zero">€0.00</string>
     
     <string name="Aboutus">About Us</string>
     <string name="Preferences">Preferences</string>
     <string name="Quit">Reminder</string>
     <string name="About"> "Establish in January 2015,FastFood Sit Down is really the cheapest way to rip off any unsuspecting customer. Loaded with salt, and a range of goodies like horse fat, the exotic flavours will guarantee that you will want to return for more and more. " </string>
</resources>
