<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".restaurantTables" >
    

    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >





<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >


   <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dates"
        android:layout_marginTop="18dp"
         />
            
        <Button
        android:id="@+id/Button02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       
        android:layout_marginLeft="15dp"
        android:layout_marginTop="66dp"
        android:background="@drawable/table2" /> 
        
        <TextView
        android:id="@+id/item_textdescption"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
       
        android:text="@string/Table1"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
   
    
    <Switch
        android:id="@+id/Switch01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     />

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     
        android:background="@drawable/table2" />
    
    <TextView
        android:id="@+id/item_textdescption1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      
        android:layout_marginLeft="16dp"
       
        android:text="@string/Table2"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    
        <Switch
        android:id="@+id/Switch02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       />

    <Button
        android:id="@+id/Button03"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      
        android:layout_marginTop="17dp"
        android:background="@drawable/table2" />
      <TextView
        android:id="@+id/item_textdescption2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:text="@string/Table3"
        android:textAppearance="?android:attr/textAppearanceLarge" />  
        
        
        
    </TableRow>
	
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    <Switch
        android:id="@+id/Switch03"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      />

    <Button
        android:id="@+id/Button04"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       
        android:background="@drawable/table2" />
        
      <TextView
        android:id="@+id/item_textdescption3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"

        android:text="@string/Table4"
        android:textAppearance="?android:attr/textAppearanceLarge" />  
        
        
        
    </TableRow>
</TableLayout>
</RelativeLayout>
</LinearLayout>